--- a/src/main/webapp/dataform.html
+++ b/src/main/webapp/dataform.html
@@ -8,10 +8,10 @@
 	<form action="/rest/robot18services/linefollower" method="post">
 	ID:<input type='number' name='id' value=''><br>
 	MotorC:<input type='number' name='motorc' value=''><br>
-	MotorD: <input type='number' name='motorc' value=''><br>
+	MotorD: <input type='number' name='motord' value=''><br>
     <input type='submit' name='ok' value='Send'>
 	</form><br>
-	<!--  
+	<!-- 
 	<br><p> if set these qualities if the obstacle is detected</p><br>
 	<form action="/rest/robot18services/obstacledetected" method="post">
 	MotorC:<input type='number' name='motorc' value=''><br>
@@ -26,6 +26,6 @@
 	Security distance:<input type='number' name='sec_distance' value=''><br>
 	Line Color: <input type='number' name='linecolor' value=''><br>
 	<input type='submit' name='ok' value='Send'>
-	</form>-->
+	</form> --> 
  </body>
 </html>
