--- a/src/main/webapp/Data.html
+++ b/src/main/webapp/Data.html
@@ -2,9 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
-<title>Insert title here</title>
+<title>Data form</title>
+<style>
+    body{ background-color:#FAFOE6; form-alignment:center;}
+    input{ align-items: center;}
+    title {color:black;}
+    p {color:rgba(124, 0, 161, 0.726);}
+  </style>
 </head>
 <body>
+<br><p> Motorc must be of a higher speed compared to motord</p><br>
 	<form action="/rest/robot18services/linefollower" method="post">
 	ID:<input type='number' name='id' value=''><br>
 	MotorC:<input type='number' name='motorc' value=''><br>
