--- a/src/main/webapp/Data.html
+++ b/src/main/webapp/Data.html
@@ -12,25 +12,12 @@
 </head>
 <body>
 <br><p> Motorc must be of a higher speed compared to motord</p><br>
-	<form action="/rest/robot18services/linefollower" method="post">
+	<form action="/rest/robot18services/functions" method="post">
 	ID:<input type='number' name='id' value=''><br>
 	MotorC:<input type='number' name='motorc' value=''><br>
 	MotorD: <input type='number' name='motord' value=''><br>
-    <input type='submit' name='ok' value='Send'>
-	</form><br>
-	
-	<br><p> if set these qualities if the obstacle is detected</p><br>
-	<form action="/rest/robot18services/obstacledetected" method="post">
-	ID:<input type='number' name='id' value=''><br>
-	Distance: <input type='number' name='cycle' value=''><br>
-	<input type='submit' name='ok' value='Send'>
-	</form>
-	
-	<br><p> if set these qualities for the sensors</p><br>
-	<form action="/rest/robot18services/sensors" method="post">
-	ID:<input type='number' name='id' value=''><br>
 	Security distance:<input type='number' name='sec_distance' value=''><br>
-	Line Color: <input type='number' name='linecolor' value='' min="0" max="1" step="6"><br>
+	Line Color: <input type='number' name='linecolor' value='' step= 'any'><br>
 	<input type='submit' name='ok' value='Send'>
 	</form> 
  </body>
